Document display activity by Subhu

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Account">
+    tools:context=".activity_Account">
+
+    <include
+        android:id="@+id/explore"
+        layout="@layout/bottom_navigation_bar"/>
 
     <View
         android:id="@+id/divider2"
